# mastermind

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  PROGRESS.md  README.md  SUMMARY.md  alembic.ini  dev.sh  docker-compose.yml  mastermind_ui.py  pyproject.toml
.claude/: settings.local.json
alembic/: SUMMARY.md  env.py
alembic/versions/: 34396aeabad9_add_starter_id_to_single_games.py  366e6e759667_add_starter_id_to_pvp_games.py  3bf2de6eeff3_update_schema_for_polymorphic_games.py  3c6b67336032_remove_google.py  6ba9518fe960_add_elo_to_player_state.py  7c2580e573cf_initial_migration_users_and_games_tables.py  7dd0459dd0e3_add_ai_pvp_support.py  SUMMARY.md
backend/: CLAUDE.md  SUMMARY.md  main.py
backend/api/: SUMMARY.md  dependencies.py
backend/api/routes/: SUMMARY.md  auth.py  games.py
backend/api/websocket/: SUMMARY.md
backend/core/: SUMMARY.md  game_engine.py  jwt_handler.py
backend/core/ai/: __init__.py  aradz_bot.py  base_ai.py  random_ai.py
backend/db/: SUMMARY.md  database.py
backend/db/models/: SUMMARY.md  __init__.py  game.py  pvp_game.py  user.py
backend/db/repositories/: SUMMARY.md  base.py  (+4 more)
backend/schemas/: SUMMARY.md  auth.py  game.py
backend/services/: SUMMARY.md  auth_service.py  game_service.py
docker/: SUMMARY.md  backend.Dockerfile  entrypoint.sh  frontend.Dockerfile  nginx.conf
frontend/: CLAUDE.md  SUMMARY.md  index.html  package-lock.json  package.json
frontend/public/: SUMMARY.md
frontend/src/: App.tsx  SUMMARY.md
legacy/: SUMMARY.md  database.py  test_database.py
scripts/: reset_and_seed_db.py  seed_ai_users.py
tests/: CLAUDE.md  SUMMARY.md  conftest.py
tests/e2e/: SUMMARY.md
tests/integration/: SUMMARY.md  test_games_api.py
tests/unit/: SUMMARY.md  test_mastermind_logic.py
(+24 files in other folders)
